--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -210,6 +210,9 @@ audio:not([controls]) {
  * Remove the border on images inside links in IE 10-.
  */
 img {
+  display:block;
+  width:100%; height:100%;
+  object-fit: cover;
   border-style: none;
 }
 
