--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,8 +212,8 @@ audio:not([controls]) {
 img {
   display:block;
   width:100%; height:100%;
-  object-fit: cover;
   border-style: none;
+  object-fit: fill;
 }
 
 /**
