--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,7 +9,7 @@ layout: default
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
       </div>
       <div class="author-name">{{site.author}}</div>
-      <p>Senior computer science student at Georgia Tech with specializations in AI and devices. Interested in Machine Learning and Computer Vision. I'm especially passionate in Software Development and Deep Learning and Computer Vision.</p>
+      <p>Senior computer science student at Georgia Tech with specializations in AI and embedded systems. Interested in Machine Learning and Computer Vision. I'm especially passionate in Software Development and Deep Learning and Computer Vision.</p>
     </div>
   </header> <!-- End Header -->
   <footer>
